Facebook videos updated

--- a/Chelsie's Website/templates/media.html
+++ b/Chelsie's Website/templates/media.html
@@ -19,23 +19,23 @@
                 <div id="instafeed"></div>
             </div>
             <div class="tab-pane bg-white gitfade" id="videos">
-                <div class="container container-sm container-md container-lg">
+{#                <div class="container container-sm container-md container-lg">#}
                     {# displaying facebook videos #}
-                    <div id="fb-root"></div>
-                    <script async defer crossorigin="anonymous"
-                            src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=216701929430972&autoLogAppEvents=1"></script>
-                    <div class="fb-video"
-                         data-href="https://www.facebook.com/chelsiengmk/videos/vb.100001783119262/984669904935771/?type=3"
-                         data-width="1080" data-show-text="true">
-                        <blockquote cite="https://developers.facebook.com/chelsiengmk/videos/984669904935771/"
-                                    class="fb-xfbml-parse-ignore"><a
-                                href="https://developers.facebook.com/chelsiengmk/videos/984669904935771/">Chinese Dance
-                            2016</a>
-                            <p>-You exist in my song- 🙈</p>Posted by <a href="https://www.facebook.com/chelsiengmk">Chelsie
-                                Ng</a> on Tuesday, May 24, 2016
-                        </blockquote>
-                    </div>
-                </div>
+{#                    <div id="fb-root"></div>#}
+{#                    <script async defer crossorigin="anonymous"#}
+{#                            src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=216701929430972&autoLogAppEvents=1"></script>#}
+{#                    <div class="fb-video"#}
+{#                         data-href="https://www.facebook.com/chelsiengmk/videos/vb.100001783119262/984669904935771/?type=3"#}
+{#                         data-width="1080" data-show-text="true">#}
+{#                        <blockquote cite="https://developers.facebook.com/chelsiengmk/videos/984669904935771/"#}
+{#                                    class="fb-xfbml-parse-ignore"><a#}
+{#                                href="https://developers.facebook.com/chelsiengmk/videos/984669904935771/">Chinese Dance#}
+{#                            2016</a>#}
+{#                            <p>-You exist in my song- 🙈</p>Posted by <a href="https://www.facebook.com/chelsiengmk">Chelsie#}
+{#                                Ng</a> on Tuesday, May 24, 2016#}
+{#                        </blockquote>#}
+{#                    </div>#}
+{#                </div>#}
                 <div class="container container-sm container-md container-lg">
                     <div id="fb-root"></div>
                     <script async defer crossorigin="anonymous"
