Instagram photo display improved

--- a/Chelsie's Website/templates/media.html
+++ b/Chelsie's Website/templates/media.html
@@ -16,7 +16,7 @@
         <div class="tab-content">
             <div class="tab-pane bg-white fade show active" id="photos">
                 {# displaying instagram pictures #}
-                <div id="instafeed"></div>
+                <div id="instafeed"><div class="gallery" id="gallery"></div></div>
             </div>
             <div class="tab-pane bg-white gitfade" id="videos">
 {#                <div class="container container-sm container-md container-lg">#}
