--- a/Chelsie's Website/static/css/stylesheet.css
+++ b/Chelsie's Website/static/css/stylesheet.css
@@ -33,3 +33,23 @@ body {
 .navbar-toggler-icon {
     color: black;
 }
+
+#instafeed {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-width: 33%;
+    -moz-column-width: 33%;
+    column-width: 33%;
+}
+
+.gallery .pics {
+    -webkit-transition: all 350ms ease;
+    transition: all 350ms ease;
+}
+
+.gallery .animation {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+}
