Updated current work experience

--- a/Chelsie's Website/templates/learnMoreAboutMe.html
+++ b/Chelsie's Website/templates/learnMoreAboutMe.html
@@ -58,11 +58,31 @@
                 </div>
             </div>
             <div class="tab-pane bg-white gitfade" id="work">
+                 <div class="media border p-3">
+                    <img src="/static/images/intact.png" height="48" width="48" class="rounded mr-3">
+                    <div class="media-body">
+                        <h4 class="lead" style="float: left">Intact</h4>
+                        <h5 style="float: right" class="lead">Jan 2021 - Present</h5>
+                        <div class="container rounded bg-light" style="clear: both">
+                            <p class="lead">Software Developer Intern</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="media border p-3">
                     <img src="/static/images/matrox.jpeg" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
                         <h4 class="lead" style="float: left">Matrox</h4>
-                        <h5 style="float: right" class="lead">May 2020 - Present (Part-time)</h5>
+                        <h5 style="float: right" class="lead">Sept 2020 - Dec 2020</h5>
+                        <div class="container rounded bg-light" style="clear: both">
+                            <p>Software Quality Assurance</p>
+                            <ul>
+                                <li>Continued work during internship</li>
+                                <li>Reported 10+ bugs on Jira</li>
+                                <li>Performed ad-hoc testing, regression testing, sanity testing, smoke testing and others</li>
+                                <li>Mentored new SQA interns</li>
+                            </ul>
+                        </div>
+                        <h5 style="float: right" class="lead">May 2020 - Aug 2020</h5>
                         <div class="container rounded bg-light" style="clear: both">
                             <p>Software Quality Assurance Intern</p>
                             <ul>
