Job experience modified

--- a/Chelsie's Website/templates/learnMoreAboutMe.html
+++ b/Chelsie's Website/templates/learnMoreAboutMe.html
@@ -74,7 +74,7 @@
                         <h4 class="lead" style="float: left">Matrox</h4>
                         <h5 style="float: right" class="lead">Sept 2020 - Dec 2020</h5>
                         <div class="container rounded bg-light" style="clear: both">
-                            <p>Software Quality Assurance</p>
+                            <p>Software Quality Assurance (Part-time)</p>
                             <ul>
                                 <li>Continued work during internship</li>
                                 <li>Reported 10+ bugs on Jira</li>
